--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 <body class="page_display">
 	<div class="main_content">
 		<div class="page_title"><h1 class="tcenter">Cloud Car</h1></div>
-		<div class="tcenter">
+		<div class="tcenter">+++++++++++++++++++++++++++++++++++++++++++
 			<canvas id="canvas">
 				Lo sentimos, su navegador no es compatible &lt;canvas&gt;.
 			</canvas>
