--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,17 +3,14 @@
 <%- include('./partials/head.ejs') %>
 <body class="page_display">
 	<div class="main_content">
-		<div class="page_title"><h1 class="tcenter">Fpv</h1></div>
-		<div class="tcenter">+++++++++++++++++++++++++++++++++++++++++++
+		<div class="page_title"><h1 class="tcenter">Streaming ESPCAM</h1></div>
+		<div class="tcenter">
 			<canvas id="canvas">
 				Lo sentimos, su navegador no es compatible &lt;canvas&gt;.
 			</canvas>
 		</div>
 	</div>
-
-	<!-- try out this canvas tag examples for resizing -->
-	<!-- <canvas width="1280" height="720"></canvas> -->
-
+	
 	<script>
 	var portStr="";
 	if(location.port != "")
